# machine-unlearning-dissertation

./: .gitignore  README.md  config.py  data_utils.py  pyproject.toml
week1_baseline/: train_original.py
week2_unlearning/: config.py  data_utils.py  evaluate.py  run_experiments.py  unlearn.py
week3-4/: .gitignore  beta_vae.py  config.py  data_utils.py  dkf.py  run_experiments.py
week5_analysis/: projection_unlearning.py  visualize_best_image_story.py  visualize_disentanglement.py  visualize_image_decomposition.py  visualize_shared_knowledge.py  visualize_su_decomposition.py
week6_7_novelty/: .gitignore  evaluate_shared_knowledge.py  ra_dkf.py  run_experiments.py
week6_7_novelty/results/: week6_7_ra_dkf_results.json
week8_enhanced_radkf/: README.md  enhanced_ra_dkf.py  evaluate_shared_knowledge.py  run_experiments.py
week8_enhanced_radkf/results/: week8_enhanced_radkf_results.json
week9_cifar100_resnet50/: .gitignore  README.md  baselines.py  beta_vae.py  config.py  data_utils.py  evaluate.py  methods.py  model_utils.py  run_experiments.py
